--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,14 +16,14 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 
-image: docker/compose:debian-1.29.1
-
-
 stages:
   - test
   - package
+  - publish
 
-
+variables:
+  PACKAGE_NAME: iparapheur-${CI_COMMIT_REF_NAME}
+  PACKAGE_NAME_WITH_EXTENSION: ${PACKAGE_NAME}.tar.gz
 # <editor-fold desc="Test">
 
 
@@ -40,53 +40,71 @@ stages:
 
 # <editor-fold desc="Package">
 
+.prepare-package: &prepare-package
+  script:
+    - echo "Packaging ${PACKAGE_NAME}"
+    - prodFiles=(
+      "docker-compose.yml"
+      "docker-compose.ipng.yml"
+      ".env.dist"
+      "LICENSE.md"
+      "README.md"
+      "src/main/resources/nginx/iparapheur.conf.template"
+      "src/main/resources/content"
+      "src/main/resources/postgres/docker-entrypoint-initdb.d"
+      "src/main/resources/keycloak"
+      "src/main/resources/prometheus/alert.rules"
+      "src/main/resources/prometheus/prometheus.yml"
+      "src/main/resources/rgpd/rgpd-template.json"
+      "src/main/resources/vault"
+      )
+    - tar cfz ${PACKAGE_NAME_WITH_EXTENSION} --files-from <(printf "%s\n" "${prodFiles[@]}")
 
-.packaging: &packaging
-  name: "i-Parapheur-$CI_COMMIT_REF_NAME"
-  paths:
-    - docker-compose.yml
-    # TODO : Check every needed thing for IPNG
-    - docker-compose.ipng.yml
-    - .env.dist
-    - LICENSE.md
-    - README.md
-    # Resources
-    - ./src/main/resources/nginx/iparapheur.conf.template
-    - ./src/main/resources/content/ip-custom-models.xml
-    - ./src/main/resources/content/custom-model-context.xml
-    - ./src/main/resources/postgres/docker-entrypoint-initdb.d/*
-    - ./src/main/resources/keycloak/startup-scripts
-    - ./src/main/resources/keycloak/keycloak.json
-    - ./src/main/resources/keycloak/themes/libriciel
-    - ./src/main/resources/keycloak/themes/iparapheur
-    - ./src/main/resources/keycloak/docker-entrypoint.sh
-    - ./src/main/resources/prometheus/alert.rules
-    - ./src/main/resources/prometheus/prometheus.yml
-    - ./src/main/resources/rgpd/rgpd-template.json
-    - ./src/main/resources/vault/config/vault.json
-    - ./src/main/resources/vault/policies/app-policy.hcl
-    # TODO : Add some proper doc (PDF?)
-
-
-zip_prod:
+package_prod:
   stage: package
   only:
     - tags
-  script:
-    - echo "Packaging things..."
+  <<: *prepare-package
   artifacts:
-    <<: *packaging
+    name: ${PACKAGE_NAME}
+    paths:
+      - ${PACKAGE_NAME_WITH_EXTENSION}
 
-
-zip:
+package:
   stage: package
   except:
     - tags
-  script:
-    - echo "Packaging things..."
+  <<: *prepare-package
   artifacts:
-    <<: *packaging
+    name: ${PACKAGE_NAME}
+    paths:
+      - ${PACKAGE_NAME_WITH_EXTENSION}
     expire_in: 30 days
 
-
 # </editor-fold desc="Package">
+
+# <editor-fold desc="Publish">
+
+.publish-package: &publish-package
+  script:
+    - echo "Publishing ${PACKAGE_NAME_WITH_EXTENSION} to https://${NEXUS_HOST}/repository/${NEXUS_FINAL_PATH}/${PACKAGE_NAME_WITH_EXTENSION}"
+    - curl -v -u ${REGISTRY_CONTAINER_USER}:${REGISTRY_CONTAINER_PASSWORD} --upload-file ${PACKAGE_NAME_WITH_EXTENSION} https://${NEXUS_HOST}/repository/${NEXUS_FINAL_PATH}/${PACKAGE_NAME_WITH_EXTENSION}
+
+publish_prod:
+  stage: publish
+  only:
+    - tags
+  <<: *publish-package
+  variables:
+    NEXUS_FINAL_PATH: ${NEXUS_PUBLIC_PATH}
+
+publish:
+  stage: publish
+  except:
+    - tags
+  <<: *publish-package
+  when: manual
+  variables:
+    NEXUS_FINAL_PATH: ${NEXUS_PRIVATE_PATH}
+
+# </editor-fold desc="Publish">
