New iparapheur name

--- a/src/main/resources/keycloak/themes/iparapheur/login/theme.properties
+++ b/src/main/resources/keycloak/themes/iparapheur/login/theme.properties
@@ -18,12 +18,12 @@
 
 parent=libriciel
 
-logoMessage=Bienvenue sur la page de connexion iParapheur
+logoMessage=Bienvenue sur la page de connexion iparapheur
 
-# Ce message est désactivé
+# Disabled message
 infoMessage=
 
 productActiveFooter=iparapheur
 productImage=iparapheur.svg
-productName=i parapheur
+productName=iparapheur
 productVersion=5.0.0 dev
