Set a global version on login footer

--- a/src/main/resources/keycloak/themes/iparapheur/login/theme.properties
+++ b/src/main/resources/keycloak/themes/iparapheur/login/theme.properties
@@ -26,4 +26,4 @@ infoMessage=
 productActiveFooter=iparapheur
 productImage=iparapheur.svg
 productName=iparapheur
-productVersion=5.0.0 dev
+productVersion=5
