--- a/src/main/resources/nginx/iparapheur.conf.template
+++ b/src/main/resources/nginx/iparapheur.conf.template
@@ -16,6 +16,7 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 
+server_names_hash_bucket_size  128;
 
 upstream up_crypto {
     server crypto:8080;
