feat: gestion des urls longues

--- a/src/main/resources/nginx/iparapheur.init.conf.template
+++ b/src/main/resources/nginx/iparapheur.init.conf.template
@@ -16,6 +16,8 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 
+server_names_hash_bucket_size  128;
+
 server {
 
   server_name ${APPLICATION_HOST};
