feat: se baser sur la variable COMPOSE_PROJECT_NAME

--- a/.env.dist
+++ b/.env.dist
@@ -18,6 +18,7 @@
 
 # https://docs.docker.com/compose/environment-variables/
 
+COMPOSE_PROJECT_NAME=iparapheur
 APPLICATION_PROTOCOL=https
 APPLICATION_HOST=iparapheur.dom.local
 CERTIFICATE_FULLCHAIN_PATH=./data/nginx/ssl/fullchain.pem
