--- a/src/main/resources/core/application-dev.yml
+++ b/src/main/resources/core/application-dev.yml
@@ -1,6 +1,6 @@
 #
-# i-Parapheur
-# Copyright (C) 2019-2021 Libriciel-SCOP
+# i-Parapheur Core
+# Copyright (C) 2018-2022 Libriciel-SCOP
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as
