--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ stages:
   - publish
   - deploy-for-strict-e2e-tests
 #  - strict-e2e-tests
-#  - deploy-for-tolerant-e2e-tests
+  - deploy-for-tolerant-e2e-tests
 #  - tolerant-e2e-tests
 
 
@@ -158,5 +158,10 @@ deploy-job-strict:
   stage: deploy-for-strict-e2e-tests
   when: manual
 
+deploy-job-tolerant:
+  extends:
+    - .deploy-job
+  stage: deploy-for-tolerant-e2e-tests
+  when: manual
 
 # </editor-fold desc="Deploy">
