feat: ajout de tests tolérants à l'erreur

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -160,8 +160,8 @@ tolerant-e2e-tests-deploy:
   stage: e2e-tests
   allow_failure: false
   needs:
-   - package
-   - strict-e2e-tests-test
+    - package
+    - strict-e2e-tests-test
 
 # </editor-fold desc="Deploy">
 
@@ -178,6 +178,20 @@ strict-e2e-tests-test:
   artifacts:
     when: always
     name: "Karate - tests strict"
+    paths:
+      - build/karate-reports
+
+tolerant-e2e-tests-test:
+  image: markhobson/maven-chrome:jdk-11
+  stage: e2e-tests
+  needs: [ tolerant-e2e-tests-deploy ]
+  allow_failure: true
+  script:
+    - echo "Test IP ${CI_COMMIT_TAG} deployed on ${TARGET_E2E_TESTS_SERVER_URL} with Karate - Some of these tests could fail. There are known problems and should be correspond to issues in gitlab."
+    - ./gradlew test -Dkarate.options="--tags ${KARATE_TAGS}" -Dkarate.headless=true -Dkarate.baseUrl="https://${TARGET_E2E_TESTS_SERVER_URL}" -Dkarate.chromeBin=/opt/google/chrome/google-chrome
+  artifacts:
+    when: always
+    name: "Karate - tests tolerant"
     paths:
       - build/karate-reports
 
