--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -183,7 +183,12 @@ tolerant-e2e-tests-deploy:
 strict-e2e-tests-test:
   image: markhobson/maven-chrome:jdk-11
   stage: e2e-tests
-  needs: [ strict-e2e-tests-deploy ]
+  needs:
+    - job: strict-e2e-tests-deploy
+      optional: true
+    - job: strict-e2e-tests-deploy-manual
+      optional: true
+
   allow_failure: false
   script:
     - echo "Test ${CI_COMMIT_TAG} deployed on ${TARGET_E2E_TESTS_SERVER_URL} with Karate - These tests mustn't fail"
