--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,7 +122,7 @@ publish:
     name: test-e2e
     url: https://${TARGET_E2E_TESTS_SERVER_URL}
   script:
-    - echo "Deploying ${CI_COMMIT_TAG} on ${TARGET_E2E_TESTS_SERVER_URL}"
+    - echo "Deploying ${CI_COMMIT_REF_NAME} on ${TARGET_E2E_TESTS_SERVER_URL}"
     - echo "Preparing ssh agent"
     - eval $(ssh-agent -s)
     - ssh-add <(echo "${SSH_PRIVATE_KEY_B64}" | base64 --decode)
@@ -191,7 +191,7 @@ strict-e2e-tests-test:
 
   allow_failure: false
   script:
-    - echo "Test ${CI_COMMIT_TAG} deployed on ${TARGET_E2E_TESTS_SERVER_URL} with Karate - These tests mustn't fail"
+    - echo "Test ${CI_COMMIT_REF_NAME} deployed on ${TARGET_E2E_TESTS_SERVER_URL} with Karate - These tests mustn't fail"
     - ./gradlew test -Dkarate.options="--tags ${KARATE_TAGS} --tags ~@fixme-ip" -Dkarate.headless=true -Dkarate.baseUrl="https://${TARGET_E2E_TESTS_SERVER_URL}" -Dkarate.chromeBin=/opt/google/chrome/google-chrome
   artifacts:
     when: always
@@ -205,7 +205,7 @@ tolerant-e2e-tests-test:
   needs: [ tolerant-e2e-tests-deploy ]
   allow_failure: true
   script:
-    - echo "Test IP ${CI_COMMIT_TAG} deployed on ${TARGET_E2E_TESTS_SERVER_URL} with Karate - Some of these tests could fail. There are known problems and should be correspond to issues in gitlab."
+    - echo "Test IP ${CI_COMMIT_REF_NAME} deployed on ${TARGET_E2E_TESTS_SERVER_URL} with Karate - Some of these tests could fail. There are known problems and should be correspond to issues in gitlab."
     - ./gradlew test -Dkarate.options="--tags ${KARATE_TAGS}" -Dkarate.headless=true -Dkarate.baseUrl="https://${TARGET_E2E_TESTS_SERVER_URL}" -Dkarate.chromeBin=/opt/google/chrome/google-chrome
   artifacts:
     when: always
