feat: Déploiement sur recette

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ stages:
   - test
   - package
   - publish
+  - deploy
   - e2e-tests
 
 variables:
@@ -157,9 +158,9 @@ strict-e2e-tests-deploy-manual:
     - tags
   allow_failure: false
   variables:
-    TARGETED_ENVIRONNEMENT_URL: ${TARGET_E2E_TESTS_SERVER_URL}
-    TARGETED_ENVIRONNEMENT_USER: ${TARGET_E2E_TESTS_SERVER_USER}
-    SSH_PRIVATE_KEY_B64: ${SSH_PRIVATE_KEY_B64_TESTS}
+    TARGETED_ENVIRONNEMENT_URL: ${E2E_TESTS_TARGET_SERVER_URL}
+    TARGETED_ENVIRONNEMENT_USER: ${E2E_TESTS_TARGET_SERVER_USER}
+    SSH_PRIVATE_KEY_B64: ${E2E_TESTS_SSH_PRIVATE_KEY_B64}
 
 strict-e2e-tests-deploy:
   extends:
@@ -171,9 +172,9 @@ strict-e2e-tests-deploy:
     - tags
   allow_failure: false
   variables:
-    TARGETED_ENVIRONNEMENT_URL: ${TARGET_E2E_TESTS_SERVER_URL}
-    TARGETED_ENVIRONNEMENT_USER: ${TARGET_E2E_TESTS_SERVER_USER}
-    SSH_PRIVATE_KEY_B64: ${SSH_PRIVATE_KEY_B64_TESTS}
+    TARGETED_ENVIRONNEMENT_URL: ${E2E_TESTS_TARGET_SERVER_URL}
+    TARGETED_ENVIRONNEMENT_USER: ${E2E_TESTS_TARGET_SERVER_USER}
+    SSH_PRIVATE_KEY_B64: ${E2E_TESTS_SSH_PRIVATE_KEY_B64}
 
 tolerant-e2e-tests-deploy:
   extends:
@@ -184,9 +185,19 @@ tolerant-e2e-tests-deploy:
     - package
     - strict-e2e-tests-test
   variables:
-    TARGETED_ENVIRONNEMENT_URL: ${TARGET_E2E_TESTS_SERVER_URL}
-    TARGETED_ENVIRONNEMENT_USER: ${TARGET_E2E_TESTS_SERVER_USER}
-    SSH_PRIVATE_KEY_B64: ${SSH_PRIVATE_KEY_B64_TESTS}
+    TARGETED_ENVIRONNEMENT_URL: ${E2E_TESTS_TARGET_SERVER_URL}
+    TARGETED_ENVIRONNEMENT_USER: ${E2E_TESTS_TARGET_SERVER_USER}
+    SSH_PRIVATE_KEY_B64: ${E2E_TESTS_SSH_PRIVATE_KEY_B64}
+
+acceptance-deploy:
+  extends:
+    - .deploy-job
+  stage: deploy
+  when: manual
+  variables:
+    TARGETED_ENVIRONNEMENT_URL: ${ACCEPTANCE_TARGET_SERVER_URL}
+    TARGETED_ENVIRONNEMENT_USER: ${ACCEPTANCE_TARGET_SERVER_USER}
+    SSH_PRIVATE_KEY_B64: ${ACCEPTANCE_SSH_PRIVATE_KEY_B64}
 
 # </editor-fold desc="Deploy">
 
