--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -228,6 +228,8 @@ tolerant-e2e-tests-test:
   image: markhobson/maven-chrome:jdk-11
   stage: e2e-tests
   needs: [ tolerant-e2e-tests-deploy ]
+  only:
+    - develop
   allow_failure: true
   script:
     - echo "Test IP ${CI_COMMIT_REF_NAME} deployed on ${E2E_TESTS_TARGET_SERVER_URL} with Karate - Some of these tests could fail. There are known problems and should be correspond to issues in gitlab."
