--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,8 +66,7 @@ variables:
 
 package_prod:
   stage: package
-  only:
-    - tags
+  only: [ tags ]
   <<: *prepare-package
   artifacts:
     name: ${PACKAGE_NAME}
@@ -76,8 +75,7 @@ package_prod:
 
 package:
   stage: package
-  except:
-    - tags
+  except: [ tags ]
   <<: *prepare-package
   artifacts:
     name: ${PACKAGE_NAME}
@@ -96,16 +94,14 @@ package:
 
 publish_prod:
   stage: publish
-  only:
-    - tags
+  only: [ tags ]
   <<: *publish-package
   variables:
     NEXUS_FINAL_PATH: ${NEXUS_PUBLIC_PATH}
 
 publish:
   stage: publish
-  except:
-    - tags
+  except: [ tags ]
   <<: *publish-package
   when: manual
   variables:
@@ -149,8 +145,7 @@ publish:
     - echo "Application successfully deployed."
 
 strict-e2e-tests-deploy-manual:
-  extends:
-    - .deploy-job
+  extends: [ .deploy-job ]
   stage: e2e-tests
   when: manual
   except:
@@ -163,8 +158,7 @@ strict-e2e-tests-deploy-manual:
     SSH_PRIVATE_KEY_B64: ${E2E_TESTS_SSH_PRIVATE_KEY_B64}
 
 strict-e2e-tests-deploy:
-  extends:
-    - .deploy-job
+  extends: [ .deploy-job ]
   stage: e2e-tests
   when: always
   only:
@@ -177,24 +171,31 @@ strict-e2e-tests-deploy:
     SSH_PRIVATE_KEY_B64: ${E2E_TESTS_SSH_PRIVATE_KEY_B64}
 
 tolerant-e2e-tests-deploy:
-  extends:
-    - .deploy-job
+  extends: [ .deploy-job ]
   stage: e2e-tests
   allow_failure: false
   needs:
     - package
     - strict-e2e-tests-test
-  only:
-    - develop
+  only: [ develop ]
   variables:
     TARGETED_ENVIRONNEMENT_URL: ${E2E_TESTS_TARGET_SERVER_URL}
     TARGETED_ENVIRONNEMENT_USER: ${E2E_TESTS_TARGET_SERVER_USER}
     SSH_PRIVATE_KEY_B64: ${E2E_TESTS_SSH_PRIVATE_KEY_B64}
 
-acceptance-deploy:
-  extends:
-    - .deploy-job
+acceptance-deploy-on-tag:
+  extends: [ .deploy-job ]
   stage: deploy
+  only: [ tags ]
+  variables:
+    TARGETED_ENVIRONNEMENT_URL: ${ACCEPTANCE_TARGET_SERVER_URL}
+    TARGETED_ENVIRONNEMENT_USER: ${ACCEPTANCE_TARGET_SERVER_USER}
+    SSH_PRIVATE_KEY_B64: ${ACCEPTANCE_SSH_PRIVATE_KEY_B64}
+
+acceptance-deploy-manual:
+  extends: [ .deploy-job ]
+  stage: deploy
+  except: [ tags ]
   when: manual
   variables:
     TARGETED_ENVIRONNEMENT_URL: ${ACCEPTANCE_TARGET_SERVER_URL}
@@ -228,8 +229,7 @@ tolerant-e2e-tests-test:
   image: markhobson/maven-chrome:jdk-11
   stage: e2e-tests
   needs: [ tolerant-e2e-tests-deploy ]
-  only:
-    - develop
+  only: [ develop ]
   allow_failure: true
   script:
     - echo "Test IP ${CI_COMMIT_REF_NAME} deployed on ${E2E_TESTS_TARGET_SERVER_URL} with Karate - Some of these tests could fail. There are known problems and should be correspond to issues in gitlab."
